# TFG

./: .gitignore  Configs_Mattin.md  README.md  docker-compose.ci.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260330_0001_init_pgvector.py  20260331_0002_workflow_entities.py  20260331_0003_repository_files.py  20260409_0004_workspace_context_refactor.py  20260420_0005_workspace_mattin_links.py  20260427_0006_block_relationships.py  20260512_0007_impact_suggestions.py  20260520_0008_drop_item_embeddings.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/integrations/: mattin_client.py
backend/app/mcp_handler/: server_handler.py
backend/app/models/: __init__.py  block.py  block_relationship.py  chat_message.py  document.py  impact_suggestion.py  item_embedding.py  repository.py  repository_file.py  user.py  workspace.py  workspace_file.py  workspace_run.py
backend/app/repositories/: auth_repository.py  repository_repository.py  workspace_repository.py
backend/app/routers/: __init__.py  agents.py  auth.py  mcp.py  repositories.py  workspace_agents.py  workspaces.py
backend/app/schemas/: agent.py  auth.py  repository.py  workspace.py
backend/app/services/: agent_service.py  auth_service.py  block_impact_service.py  block_relationship_service.py  repository_service.py  workspace_service.py
backend/app/tasks/: __init__.py
frontend/: .dockerignore  (+4 more)
(+45 files in other folders)
