[tool.poetry]
name = "tfg-backend"
version = "0.1.0"
description = "FastAPI backend for TFG"
authors = ["Telmo <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.35"
psycopg = { extras = ["binary"], version = "^3.2.1" }
alembic = "^1.13.2"
pydantic-settings = "^2.6.1"
pgvector = "^0.3.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
